--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/LandingHeader.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/LandingHeader.razor
@@ -9,7 +9,11 @@
     <img src="assets/dotnet-logo-trans.png" class="img-thumbnail" width="100" alt="Responsive image">
 </FluentStack>
 <h4> Transformamos tus ideas en realidad con soluciones Blazor de alta calidad</h4>
-<FluentButton Appearance="Appearance.Accent" Style="margin-top: 20px;" OnClick="@EditAsync">Contáctanos hoy</FluentButton>
+<Services />
+<FluentButton Appearance="Appearance.Accent" Style="margin-top: 20px;" OnClick="@EditAsync">Contáctanos</FluentButton>
+<Vision/>
+<WhyBlazor/>
+<WorkWithUs/>
 
 
 @code{
