--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/MoreInfo.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/MoreInfo.razor
@@ -7,18 +7,18 @@
         <FluentIcon Value="@(new Icons.Regular.Size20.EditSettings())" Color="@Color.Neutral" Slot="start" />
         <WhyBlazor />
     </FluentAccordionItem>
-    <FluentAccordionItem Heading="Servicios">
+   @*  <FluentAccordionItem Heading="Servicios">
         <FluentIcon Value="@(new Icons.Regular.Size20.Server())" Color="@Color.Neutral" Slot="start" />
         <Services />
-    </FluentAccordionItem>
+    </FluentAccordionItem> *@
     <FluentAccordionItem Heading="Trabajar con nosotros">
         <FluentIcon Value="@(new Icons.Regular.Size20.CalendarWorkWeek())" Color="@Color.Neutral" Slot="start" />
         <WorkWithUs/>
     </FluentAccordionItem>
-    <FluentAccordionItem Heading="Nuestros clientes">
+   @*  <FluentAccordionItem Heading="Nuestros clientes">
         <FluentIcon Value="@(new Icons.Regular.Size20.LinkPerson())" Color="@Color.Neutral" Slot="start" />
         <Testimonials/>
-    </FluentAccordionItem>
+    </FluentAccordionItem> *@
 </FluentAccordion>
 
 @code {
