--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/Services.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/Services.razor
@@ -1,8 +1,8 @@
 ﻿
 <section>
     <FluentStack Orientation="Orientation.Vertical" HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center" Width="100%">
-        <h2>Nuestros Servicios</h2>
-        <p>Ofrecemos consultoría especializada y formación en Blazor para ayudarte a alcanzar tus objetivos tecnológicos.</p>
+        <h2 style="color:#6A1B9A;">Nuestros Servicios</h2>
+        <h3>Ofrecemos consultoría especializada y formación en Blazor para ayudarte a alcanzar tus objetivos tecnológicos.</h3>
         <FluentStack Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center" Width="100%">
             <FluentCard Style="background-color: #6A1B9A; color:white;text-align:center;height: 15vh;">
                 <p><FluentIcon Value="@(new Icons.Regular.Size48.AppGeneric())" Color="@Color.Lightweight" /></p>
