--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/Vision.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/Vision.razor
@@ -1,4 +1,6 @@
 ﻿<section>
-    <h2>Nuestra Visión</h2>
-    <p>En TNZ Servicios Informaticos, creemos en la innovación, la calidad y el compromiso con nuestros clientes. Nos esforzamos por ofrecer soluciones personalizadas que se adapten a las necesidades específicas de cada cliente.</p>
+    <FluentStack HorizontalAlignment="HorizontalAlignment.Center" Orientation="Orientation.Vertical" Style="width: 40vw;">
+        <h2 style="color:#6A1B9A;">Nuestra Visión</h2>
+        <h4 style="color:black;padding:20px;">En TNZ Servicios Informaticos, creemos en la innovación, la calidad y el compromiso con nuestros clientes. Nos esforzamos por ofrecer soluciones personalizadas que se adapten a las necesidades específicas de cada cliente.</h4>
+    </FluentStack>
 </section>
