--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/WorkWithUs.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/WorkWithUs.razor
@@ -1,9 +1,11 @@
 ﻿<section>
-    <h2>¿Por Qué Trabajar con Nosotros?</h2>
-    <ul>
-        <li><strong>Experiencia:</strong> Más de 5 años de experiencia en Blazor.</li>
-        <li><strong>Especialización:</strong> Equipo de expertos certificados en Blazor.</li>
-        <li><strong>Resultados:</strong> Proyectos exitosos y clientes satisfechos.</li>
-        <li><strong>Soporte:</strong> Asistencia continua y formación personalizada.</li>
-    </ul>
+    <FluentStack HorizontalAlignment="HorizontalAlignment.Center" Orientation="Orientation.Vertical" Style="width: 40vw;">
+        <h2 style="color:#6A1B9A;">¿Por Qué Trabajar con Nosotros?</h2>
+        <ul>
+            <li><strong>Experiencia:</strong> Más de 5 años de experiencia en Blazor.</li>
+            <li><strong>Especialización:</strong> Equipo de expertos certificados en Blazor.</li>
+            <li><strong>Resultados:</strong> Proyectos exitosos y clientes satisfechos.</li>
+            <li><strong>Soporte:</strong> Asistencia continua y formación personalizada.</li>
+        </ul>
+    </FluentStack>
 </section>
