--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/WhyBlazor.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/WhyBlazor.razor
@@ -1,16 +1,22 @@
-﻿<section>
-    <FluentStack HorizontalAlignment="HorizontalAlignment.Center" Orientation="Orientation.Vertical" Style="width: 40vw;">
-        <h2 style="color:#6A1B9A;">¿Por Qué Elegir Blazor?</h2>
-        <h3>Blazor es una excelente opción para cualquier empresa que busque un stack tecnológico único y eficiente. Aquí te explicamos por qué:</h3>
-        <ul>
-            <li><strong>Único Stack Tecnológico:</strong> Blazor permite desarrollar tanto el frontend como el backend utilizando C#, eliminando la necesidad de aprender múltiples lenguajes y frameworks.</li>
-            <li><strong>Múltiples Modelos de Hospedaje y Renderizado:</strong> Blazor ofrece flexibilidad con modelos de hospedaje como Blazor Server y Blazor WebAssembly, adaptándose a diferentes necesidades y escenarios.</li>
-            <li><strong>Ecosistema Estable y Potente:</strong> Al estar basado en .NET, Blazor se beneficia de un ecosistema robusto y maduro, con acceso a una amplia gama de bibliotecas y herramientas.</li>
-            <li><strong>Productividad Mejorada:</strong> La capacidad de escribir código en C# mejora la productividad en el desarrollo y mantenimiento de aplicaciones, aprovechando el conocimiento existente de .NET.</li>
-            <li><strong>Rendimiento y Seguridad:</strong> Blazor ofrece beneficios de rendimiento, confiabilidad y seguridad inherentes a .NET, garantizando aplicaciones rápidas y seguras.</li>
-            <li><strong>Compatibilidad con HTML y CSS:</strong> Blazor permite crear interfaces de usuario interactivas y modernas utilizando HTML y CSS, asegurando compatibilidad con todos los navegadores.</li>
-            <li><strong>Integración con Herramientas Modernas:</strong> Blazor se integra fácilmente con plataformas de hospedaje modernas como Docker, y herramientas de desarrollo como Visual Studio y Visual Studio Code.</li>
-        </ul>
-        <h4>Con Blazor, puedes construir aplicaciones web interactivas y eficientes, aprovechando todas las ventajas que ofrece el ecosistema .NET.</h4>
-    </FluentStack>
-</section>
+﻿<FluentGridItem xs="12" md="6">
+    <section>   
+        <FluentCard Style="max-width:50vw;">
+            <h2 style="color:#6A1B9A;">¿Por Qué Elegir Blazor?</h2>
+            <h3>Blazor es una excelente opción para cualquier empresa que busque un stack tecnológico único y eficiente. Aquí te explicamos por qué:</h3>
+            <FluentGrid>
+
+            </FluentGrid>
+            <ul>
+                <li><strong>Único Stack Tecnológico:</strong> Blazor permite desarrollar tanto el frontend como el backend utilizando C#, eliminando la necesidad de aprender múltiples lenguajes y frameworks.</li>
+                <li><strong>Múltiples Modelos de Hospedaje y Renderizado:</strong> Blazor ofrece flexibilidad con modelos de hospedaje como Blazor Server y Blazor WebAssembly, adaptándose a diferentes necesidades y escenarios.</li>
+                <li><strong>Ecosistema Estable y Potente:</strong> Al estar basado en .NET, Blazor se beneficia de un ecosistema robusto y maduro, con acceso a una amplia gama de bibliotecas y herramientas.</li>
+                <li><strong>Productividad Mejorada:</strong> La capacidad de escribir código en C# mejora la productividad en el desarrollo y mantenimiento de aplicaciones, aprovechando el conocimiento existente de .NET.</li>
+                <li><strong>Rendimiento y Seguridad:</strong> Blazor ofrece beneficios de rendimiento, confiabilidad y seguridad inherentes a .NET, garantizando aplicaciones rápidas y seguras.</li>
+                <li><strong>Compatibilidad con HTML y CSS:</strong> Blazor permite crear interfaces de usuario interactivas y modernas utilizando HTML y CSS, asegurando compatibilidad con todos los navegadores.</li>
+                <li><strong>Integración con Herramientas Modernas:</strong> Blazor se integra fácilmente con plataformas de hospedaje modernas como Docker, y herramientas de desarrollo como Visual Studio y Visual Studio Code.</li>
+            </ul>
+            <h4>Con Blazor, puedes construir aplicaciones web interactivas y eficientes, aprovechando todas las ventajas que ofrece el ecosistema .NET.</h4>
+        </FluentCard>
+    </section>
+</FluentGridItem>
+    
