INFRA: Tianji data anlytics

--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/App.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/App.razor
@@ -10,6 +10,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="SergioTenza.Blazor.Wasm.styles.css" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <script async defer src="https://tianji.tnzservicios.es/tracker.js" data-website-id="cm5pke3fu000110jokscqrzph"></script>
     <HeadOutlet @rendermode="InteractiveServer"/>
 </head>
 
